--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "engines": {
+    "node": "7.8.0"
+  },
   "author": "Daniel McNinch",
   "license": "ISC",
   "dependencies": {
